# acl-popcity

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs
crates/cli/templates/: hello.rs  world.rs
crates/config_macros/: Cargo.toml
crates/config_macros/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/error_macros/: Cargo.toml
crates/error_macros/demo/: demo.rs
crates/error_macros/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
src/: lib.rs  main.rs
src/app/: mod.rs
src/commands/: migrate_cmd.rs  mod.rs  run_cmd.rs
src/common/: config.rs  consts.rs  error.rs  mod.rs
src/database/: mod.rs
src/database/entities/: mod.rs  points.rs  prelude.rs  users.rs
src/database/migration/: m20241223_064204_create_users_table.rs  m20241225_025628_create_points_table.rs  mod.rs
src/database/services/: points.rs  users.rs
src/helpers/: google_auth.rs
src/server/: message.rs  mod.rs  router.rs  server.rs
src/server/auth/: auth_handler.rs  auth_message.rs  auth_router.rs  auth_service.rs  mod.rs
src/server/health/: health_handler.rs  health_router.rs  mod.rs
src/server/middlewares/: auth_jwt_verify.rs  auth_token_extract.rs  handle_error.rs  mod.rs
src/server/middlewares/jwt/: jwt_auth.rs  jwt_handler.rs  mod.rs
src/server/user/: mod.rs  user_handler.rs  user_message.rs  user_router.rs  user_service.rs
src/server/webset/: mod.rs  webset_handler.rs  webset_router.rs
static/: index.html
templates/: config.yaml
