[package]
name = "pop_up_city"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
cli = {path = "./crates/cli"}
config_macros = {path = "./crates/config_macros"}
db = {path = "./crates/db"}
error_macros = {path = "./crates/error_macros"}
logging = {path = "./crates/logging"}
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-async-std" , "runtime-tokio"] }
sea-orm-migration = "1.1.1"
chrono = "0.4.39"
axum = { version = "0.7.5", features = ["macros"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "auth", "compression-full", "trace", "cors", "fs", "validate-request"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
jsonwebtoken = "9.3.0"
secrecy = { version = "0.8.0", features = ["serde"] }
validator = { version = "0.19.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.8.5"
alloy-primitives = { version = "0.8.15", features = ["k256"] }
alloy-signer = { version = "0.8.3" }
alloy-signer-local = "0.8.3"
once_cell = "1.20.2"
tower-sessions = "0.13.0"

[workspace]
members = [
    "crates/cli",
    "crates/config_macros",
    "crates/db",
    "crates/error_macros",
    "crates/logging",
]

